# wealth

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
docs/: API_PROTOCOL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
wealth/: pyproject.toml
wealth/frontend/: package-lock.json  package.json  vite.config.js
wealth/frontend/src/: App.vue  main.js
wealth/frontend/src/components/: AppHeader.vue  AppTag.vue  HoverCard.vue  LanguageSwitcher.vue
wealth/frontend/src/i18n/: en.js  index.js  zh.js
wealth/frontend/src/router/: index.js
wealth/frontend/src/views/: HomeView.vue  MonitoringView.vue  PredictionView.vue
wealth/scripts/: benchmark_results.json  performance_benchmark.py  setup_env.py
wealth/src/wealth/: main.py
wealth/src/wealth/api/: routes.py
wealth/src/wealth/ml/: __init__.py  features.py  predictor.py
wealth/src/wealth/security/: __init__.py  encryption.py  middleware.py
wealth/src/wealth/utils/: helpers.py  performance.py
wealth/src/wealth/vis/: __init__.py  backtest_charts.py  base.py  dashboard.py  indicator_charts.py  prediction_charts.py  stock_charts.py
